# anniversary-notify

./: .gitignore  main.py  pyproject.toml  vercel.json
.github/workflows/: ci.yml  cron.yml
api/: cron.py
src/: __init__.py  job.py  prompt.j2  strategies.py  vercel_build.py
src/logic/: __init__.py  left.py  strategy.py
src/templates/: __init__.py  build-summary.j2  prompt.j2  response.j2
src/utils/: default.py  llm.py  log.py  markdown.py  messages.j2  resend.py
