[project]
name = "anniversary-notify"
version = "0"
authors = [{ name = "Muspi Merol", email = "me@muspimerol.site" }]
requires-python = ">=3.12"
dependencies = [
    "resend~=2.12.0",
    "mistune~=3.1.0",
    "promplate[openai]~=0.3.5.0",
    "promptools[validation]~=0.1.3.5",
    "tenacity~=9.1.2",
    "lunarcalendar~=0.0.9",
    "rich~=14.1.0",
    "html-text~=0.7.0",
    "hmr~=0.6.1",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = { cmd = ["hmr", "main.py"] }
fmt = { composite = ["ruff format", "ruff check --fix-only"] }

[tool.uv]
dev-dependencies = ["ruff~=0.12.0", "python-dotenv~=1.1.0"]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
extend-select = [
    "B",
    "I",
    "N",
    "W",
    "C4",
    "UP",
    "ARG",
    "PIE",
    "PTH",
    "RSE",
    "SIM",
    "SLF",
    "TC",
    "TRY",
    "FURB",
]
